# project-chtholly-qt

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
.ci/win/: win-setup.iss
.github/workflows/: build_and_release.yml  build_and_release_32.yml
